--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <p>Todos los dias hay que agradecer por un nuevo dia, por una nueva portunidad diaria de aprender, agradecer por la vida y sus dificultades ya que tambien se aprende de ello.
     <h2>Cosas por las cuales hay que agradecer</h2>
     <h2>Describelas:</h2>
-    <a><img src="./imagenPP" alt="Aqui va la imagen">
+    <a><img src="./imagenPP.jpg" alt="Aqui va la imagen">
      <title>Lacreacion</title></a> 
      </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque impedit consequatur mollitia quo suscipit necessitatibus tempora deserunt. Vitae libero nisi assumenda dolor? Amet sit voluptatem distinctio consectetur quam atque officia.</p>
      <br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum asperiores veniam iusto perspiciatis dolorem, illum soluta vero nostrum obcaecati nam atque laborum ex culpa voluptas, dolorum cumque ratione! Incidunt, ea.</br>
@@ -22,7 +22,7 @@
      2)Apellido:<ins>Uribe Giraldo</ins><br>
      3)Identificacion:<del>43000000</del><br>
      4)Fecha de Nacimento:<mark>Noviembre 21 de 1976</mark><br>
-     5)Cual es el regalo que Dios te da:<small>La Vida</small>
+     5)Cual es el regalo que Dios te da:<small>La Vida </small>
 
     </body>
 </html>
